--- a/resources/d.html
+++ b/resources/d.html
@@ -6,7 +6,9 @@
     <title>Ally's Chart</title>
 </head>
 <body class="max-w-4xl py-4">
-<div><canvas id="myChart"></canvas></div>
+<div>
+  <canvas id="myChart"></canvas>
+</div>
 <script>
     let stats = {};
 
