--- a/resources/m.html
+++ b/resources/m.html
@@ -5,7 +5,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Ally's Chart</title>
 </head>
-<body className="max-w-4xl py-4">
+<body class="max-w-4xl py-4">
 <div>
     <canvas id="myChart"></canvas>
 </div>
