--- a/resources/d.html
+++ b/resources/d.html
@@ -1,23 +1,23 @@
 <html lang="en" style="background: #1d1e20 !important;">
 <head>
-    <meta charSet="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Ally's Chart</title>
 </head>
-<body className="max-w-4xl py-4">
+<body class="max-w-4xl py-4">
 <div>
-    <canvas id="myChart"></canvas>
+  <canvas id="myChart"></canvas>
 </div>
 <script>
     let stats = {};
 
     document.onreadystatechange = function () {
         if (document.readyState === "interactive") {
-            fetch('1m.json')
+            fetch('1d.json')
                 .then((response) => response.json())
                 .then((json) => {
-                    stats = json.data.viewer.analytics[0].httpRequests1dGroups;
+                    stats = json.data.viewer.analytics[0].httpRequests1hGroups;
                     console.log(stats);
                 })
                 .then(() => {
@@ -27,7 +27,7 @@
                     let visitors = [];
                     let requests = [];
                     for (let day of stats) {
-                        labels.push(day.dimensions.date);
+                        labels.push(day.dimensions.datetime);
                         visitors.push(day.uniq.uniques);
                         requests.push(day.sum.requests);
                     }
@@ -73,7 +73,7 @@
                                 },
                                 subtitle: {
                                     display: true,
-                                    text: 'Last 30 days'
+                                    text: 'Last 24hrs'
                                 }
                             },
 
@@ -134,7 +134,7 @@
 <script
         src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
         integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
-        crossOrigin="anonymous"
+        crossorigin="anonymous"
         referrerpolicy="no-referrer"
 ></script>
 </html>
